# algs

./: .gitignore
Algs/: Algs.csproj  Program.cs
Algs/Core/: AVLTree.cs  ArrayHelpers.cs  MostPriority.cs  NumberHelpers.cs  PriorityQueue.cs
Algs/Tasks/Arrays/: EmaSupercomputer.cs  MaxSubArrayFinder.cs  MaximumSubarraySum.cs  MissingNumbers.cs  SparseArrays.cs  TheBombermanGame.cs
Algs/Tasks/DynProg/: CoinsCounter.cs  CoinsCounter3.cs  NikitaAndTheGame.cs
Algs/Tasks/GraphAlg/: PrimMSTSpecialSubtree.cs
Algs/Tasks/Graphics/: ClosestsPointersFinder.cs  Point.cs
Algs/Tasks/Heaps/: Heap.cs  MedianCounter.cs  MinimumAverageWaitingTime.cs
Algs/Tasks/Numbers/: AbsolutePermutation.cs  KaratsubaMultiplier.cs  StairsChecker.cs
Algs/Tasks/Rol/: RolInplace.cs  RolSimple.cs
Algs/TestUtilities/: ArrayUtilities.cs  RandomHelpers.cs
Algs/Utilities/: ArrayHelpers.cs  Input.cs  MostPriority.cs  NumberHelpers.cs  RandomHelpers.cs
c#/: Algs.sln
c#/Algs/: Algs.csproj  Program.cs
cpp/: compile_run.cmd  variable_sized_arrays.cpp  virtual_functions.cpp
cpp/AttributeParser/: CMakeLists.txt  main.cpp
cpp2/: CMakeLists.txt
cpp2/common/: common.cpp  common.h
cpp2/problems/: Encryption.cpp  ExtraLongFactorials.cpp  HackerlandRadioTransmitters.cpp  Lcs.cpp  NonDivisibleSubset.cpp  OrganizingContainersOfBalls.cpp  Pairs.cpp  QueensAttack2.cpp
java/: convertArrayToReducedForm.java  kThSmallestElement.java  largestNumberFromArray.java  maxLengthBitonicSubArray.java  maximumIndex.java  numberToWords.java  sortByFrequency.java  tripletSumInArray.java  urlShortener.java
(+69 files in other folders)
